# esp32-wroom-32

./: .clang-format  README.md  build.sh
1_hello_world/main/: CMakeLists.txt  hello_world_main.c
2_blink_led/main/: CMakeLists.txt  blink_example_main.c
3_i2c_tools/main/: CMakeLists.txt  cmd_i2ctools.c  i2ctools_example_main.c
4_i2c_at24cxx/: CMakeLists.txt  sdkconfig
4_i2c_at24cxx/main/: CMakeLists.txt  at24cxx_main.c
5_i2c_at24c/: sdkconfig  sdkconfig.old
5_i2c_at24c/components/at24c/: CMakeLists.txt  at24c.c  at24c.h
5_i2c_at24c/main/: main.c
6_multi_task/: CMakeLists.txt
6_multi_task/main/: CMakeLists.txt  multi_main.c
7_spi_ssd1327/: CMakeLists.txt
7_spi_ssd1327/main/: CMakeLists.txt  display_ssd1327.c  display_ssd1327.h  display_ssd1327_main.c
7_spi_ssd1327/main/fonts/: fonts.h
7_spi_ssd1327/main/gui/: gui_bmpfile.c  gui_bmpfile.h  gui_paint.c  gui_paint.h
common/: wroom_log.h
components/i2c_tools/: CMakeLists.txt  cmd_i2ctools.h  i2ctools.c
components/lettershell/: CMakeLists.txt  shell_port.c
